# inx-edcas-indexer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  createTables.sql  updateOldDatabase.sql
.github/workflows/: rust.yml
proto/: inx.proto
src/: event_handler.rs  main.rs
