[package]
name = "inx-edcas-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version = "1.0.3", features = ["stronghold","rocksdb", "mqtt"]}
tokio = { version = "1.25.0", features = ["full"] }
async-std = "1.10"
async-recursion = "1.0.0"
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.94"
hex = "0.4.3"
rustc-hex = "2.1.0"
base64 = "0.21.2"
zmq = "0.10.0"
tokio-postgres = "0.7.8"
chrono = "0.4.26"

log = "0.4.19"