[package]
name = "inx-edcas-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version = "1.1.4", features = ["mqtt"]}
tokio = { version = "1.34.0", features = ["full"] }
async-std = "1.12"
async-recursion = "1.0.5"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.108"
hex = "0.4.3"
rustc-hex = "2.1.0"
base64 = "0.21.5"
zmq = "0.10.0"
tokio-postgres = "0.7.10"
chrono = "0.4.31"

tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"

log = "0.4.20"
thiserror = "1.0.56"

[build-dependencies]
tonic-build = "0.11.0"